Fixed some text in comments

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--QuizShow made by Szakacsi Ferenc-Adam-->
+<!--quiz-show made by Szakacsi Ferenc-Adam-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
